# smartLLM

./: .gitignore  AGENTS.md  README.md  pyproject.toml
lessons/: lesson_1780115852.md  lesson_1780117675.md  lesson_1780118486.md
src/smart_llm/: __init__.py  bootstrap.py  broker.py  build.py  cli.py  cluster.py  consolidate.py  detect.py  embed.py  extract.py  git_diff.py  learn.py  llm.py  polyglot.py  proactive.py  query.py  server.py  sqlite_ledger.py  sync.py  synopsis.py  verify.py  watcher.py  widget.swift  widget_app.py  widget_sync.py
src/smart_llm/widget/: Info-Widget.plist  Info.plist  SmartLLMApp.swift  SmartLLMWidget.swift  build_widget.sh
tests/: test_cognitive.py  test_git_diff.py  test_hardware.py  test_smart_llm.py  test_ultimate.py
xcode-widget/: project.yml
xcode-widget/SmartLLM.xcodeproj/: project.pbxproj
xcode-widget/SmartLLMApp/: Info.plist  SmartLLMApp.swift
xcode-widget/SmartLLMWidgetExtension/: Info.plist  SmartLLMWidget.swift  SmartLLMWidgetExtension.entitlements
